# pccl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
benchmarks/: CMakeLists.txt  cli.cpp  codec_explorer.cpp  pcc_codec.hpp  pcc_codec_extra.hpp  pcc_loader.hpp  pcc_octree.hpp  pcc_pipeline.hpp  roundtrip_bench.cpp
include/pccl/: pccl.hpp  pccl_export.hpp
src/: pccl.cpp  pccl_simd.hpp
tests/: CMakeLists.txt  test_aabb_edges.cpp  test_alignment.cpp  test_corrupted.cpp  test_determinism.cpp  test_file_io.cpp  test_header.cpp  test_helpers.hpp  test_nonfinite.cpp  test_roundtrip.cpp  ubsan_suppressions.txt
